--- a/PhillipCapital/PhillipCapital.Android/PhillipCapital.Android.csproj
+++ b/PhillipCapital/PhillipCapital.Android/PhillipCapital.Android.csproj
@@ -289,5 +289,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\back_icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\white_check.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\white_next.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
