--- a/PhillipCapital/PhillipCapital/PhillipCapital.csproj
+++ b/PhillipCapital/PhillipCapital/PhillipCapital.csproj
@@ -69,6 +69,9 @@
     <EmbeddedResource Update="Page\SearchFund\SearchFundPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Page\Summary\ReviewSummary.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\Dashboard\DashboardCarouselItemView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
